--- a/order.html
+++ b/order.html
@@ -168,7 +168,7 @@
 		                    <p class="grey-line"></p>
 		 					<h4 class="des2"><a class="mail" href="mailto:dawgpizzaseattle@gmail.com">Email:dawgpizzaseattle@gmail.com</a></h4>
 							<h4 class="des2">© Copyright 2013 &nbsp&nbsp&nbsp&nbsp&nbsp&nbspDawgPizza  </h4>   
-							<a href="https://github.com/yuyangfan/DawgPizza-2.0-">My Repo</a>   
+							<a href="https://github.com/yuyangfan/DawgPizza-4.0--shopping-cart-">My Repo</a>   
 							<p class="space"></p>
 
 		        </div>
